feat: use sequence collection at the code
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>